syntax = "proto3";

package com.academy.fintech.pg;

option java_multiple_files = true;

service DisbursementService{
  rpc MakeDisbursement(DisbursementRequest) returns (DisbursementResponse) {}
}

message DisbursementRequest{
  string clientId = 1;
  string amount = 2;
}

message DisbursementResponse{
  int64 date = 1;
}